Cập nhật các tùy chọn xếp loại trong popup.html để cải thiện tính chính xác và rõ ràng

--- a/popup.html
+++ b/popup.html
@@ -22,12 +22,12 @@
         <i class="fas fa-star"></i> Chọn xếp loại (câu 1 - 48):
       </label>
       <select id="rating">
-        <option value="1" selected>Xuất Sắc (1) <i class="fas fa-star"></i></option>
-        <option value="2">Rất Tốt (2) <i class="fas fa-thumbs-up"></i></option>
-        <option value="3">Tốt (3) <i class="far fa-smile"></i></option>
-        <option value="4">Bình Thường (4) <i class="far fa-meh"></i></option>
-        <option value="5">Kém (5) <i class="far fa-frown"></i></option>
-        <option value="6">Rất Kém (6) <i class="fas fa-thumbs-down"></i></option>
+        <option value="1" selected>Tốt (1) <i class="fas fa-star"></i></option>
+        <option value="2">Khá (2) <i class="fas fa-thumbs-up"></i></option>
+        <option value="3">Trung Bình (3) <i class="far fa-smile"></i></option>
+        <option value="4">Trung Bình Yếu (4) <i class="far fa-meh"></i></option>
+        <option value="5">Yếu (5) <i class="far fa-frown"></i></option>
+        <option value="6">Kém (6) <i class="fas fa-thumbs-down"></i></option>
       </select>
 
       <label for="customText">
